Add neuralangelo project scripts and visualize_colmap notebook
- Added `.python-version` file with `neuralangelo` as the Python version.
- Added `convert_from_instant_ngp.sh` script to convert data from instant NGP format to COLMAP format.
- Added `visualize_colmap.ipynb` notebook for visualizing COLMAP data.
- Updated `colmap` submodule to commit `c0d8926`.

These changes add support for the `neuralangelo` project, including a script to convert data and a notebook for visualization. The `convert_from_instant_ngp.sh` script converts data from the instant NGP format to the COLMAP format. The `visualize_colmap.ipynb` notebook provides a visualization of the COLMAP data. The `colmap` submodule has also been updated to the latest commit `c0d8926`.

--- a/projects/neuralangelo/scripts/visualize_colmap.ipynb
+++ b/projects/neuralangelo/scripts/visualize_colmap.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8b8d7b17-af50-42cd-b531-ef61c49c9e61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Directory Path: /run/media/matthias/1274B04B74B032F9/git/neuralangelo\n"
+     ]
+    }
+   ],
    "source": [
     "# Set the work directory to the imaginaire root.\n",
     "import os, sys, time\n",
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2b5b9e2f-841c-4815-92e0-0c76ed46da62",
    "metadata": {},
    "outputs": [],
@@ -36,13 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "76033016-2d92-4a5d-9e50-3978553e8df4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# images: 176\n",
+      "# points: 128622\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the COLMAP data.\n",
-    "colmap_path = \"datasets/lego_ds2\"\n",
+    "colmap_path = \"/run/media/matthias/68458e6f-73c7-439c-af08-2062edd89cbe/data/reconstruction/lizard_landscape\"\n",
     "cameras, images, points_3D = read_model(path=f\"{colmap_path}/sparse\", ext=\".bin\")\n",
     "# Convert camera poses.\n",
     "images = OrderedDict(sorted(images.items()))\n",
@@ -60,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "47862ee1-286c-4877-a181-4b33b7733719",
    "metadata": {},
    "outputs": [],
@@ -70,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b6cf60ec-fe6a-43ba-9aaf-e3c7afd88208",
    "metadata": {},
    "outputs": [],
@@ -85,7 +102,7 @@
     "# These variables can be adjusted to make the bounding sphere fit the region of interest.\n",
     "# The adjusted values can then be set in the config as data.readjust.center and data.readjust.scale\n",
     "readjust_center = np.array([0., 0., 0.])\n",
-    "readjust_scale = 1.\n",
+    "readjust_scale = 0.3\n",
     "# ------------------------------------------------------------------------------------\n",
     "center += readjust_center\n",
     "radius *= readjust_scale\n",
@@ -122,10 +139,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fdde170b-4546-4617-9162-a9fcb936347d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "785053994f514324b17bbdba80c5c01f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# ... or visualize with K3D.\n",
     "plot = k3d.plot(name=\"poses\", height=800, camera_rotate_speed=5.0, camera_zoom_speed=3.0, camera_pan_speed=1.0)\n",
@@ -137,6 +169,14 @@
     "plot.display()\n",
     "plot.camera_fov = 30.0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1836042c-eff8-4bb5-94ed-f3da34ba43e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -155,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
